JavaScript - Coding Assignment 1

--- a/template.html
+++ b/template.html
@@ -7,7 +7,7 @@
   <title>My Awesome Kanban App</title>
 </head>
 <body>
-  <div id="add-task" class="new-task"></div>
+  <div class="container"><div id="add-task" class="new-task"></div></div>
   <div class="container" id="container">
     <div class="lane">
       <h3>To do</h3>
@@ -22,6 +22,5 @@
       <div id="done"></div>
     </div>
   </div>
- 
 </body>
 </html>
