--- a/template.html
+++ b/template.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <title>My Awesome Kanban App</title>
 </head>
 <body>
@@ -19,7 +21,9 @@
     </div>
     <div class="lane" >
       <h3>Done</h3>
-      <div id="done"></div>
+      <div id="done">
+
+      </div>
     </div>
   </div>
  
